tests/parsing-test/test_out/impl-block.txt
error: scope item not found
 --> impl-block/root.ctl:1:139
  |
1 | struct Struct { field : u32 ; } ; impl Struct {     fn constructor() -> Self => Self\{ field : 0 } ; fn method(s : ^ Self)     -> uint => self.field ; } ;
  |                                                                                                                                           ^^^^ this does not exist or is not imported
  |
  = help: expected variable, enum, constant or module
  = info: debug: queried 'self'

info: formatted:
 struct Struct {
	field: u32
}

impl Struct {
	fn constructor() -> Self => Self\{field: 0}
	fn method(s: ^Self) -> uint => self.field
}

